chore: Work on Edge Adjacency Matrix

--- a/auto_segment/research/GMM + Superpixels n iterations on 1 image.ipynb
+++ b/auto_segment/research/GMM + Superpixels n iterations on 1 image.ipynb
@@ -3,10 +3,17 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-1-59edb1a91016>, line 13)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-59edb1a91016>\"\u001b[0;36m, line \u001b[0;32m13\u001b[0m\n\u001b[0;31m    from helpers imprt get_smaller_image\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.mixture import GaussianMixture\n",
     "import cv2\n",
@@ -20,7 +27,7 @@
     "import sys\n",
     "sys.path.append(\"../\");\n",
     "import superpixels as sp\n",
-    "from helpers import get_smaller_image\n",
+    "from helpers imprt get_smaller_image\n",
     "from models import *\n",
     "\n",
     "filename = '../data/toothpick.mp4'\n",
@@ -250,7 +257,7 @@
     "\n",
     "for i in range(1):\n",
     "    image = get_smaller_image(vid, i)\n",
-    "    sp.num_superpixels = 100\n",
+    "#     sp.num_superpixels = 100\n",
     "    maps = sp.extract_superpixels(image)\n",
     "\n",
     "    # fixation point is assumed to be at the center of the image.\n",
