fix: Fix GMM + Graph Cut 1 Image

--- a/auto_segment/research/PyMaxFlow examples.ipynb
+++ b/auto_segment/research/PyMaxFlow examples.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -33,10 +33,10 @@
     {
      "data": {
       "text/plain": [
-       "<_maxflow.GraphInt at 0x7f63fa5a0270>"
+       "<_maxflow.GraphInt at 0x7fc527aa7768>"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,7 +420,9 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -517,7 +519,64 @@
    "source": [
     "# Graph cut with multiple source/sinks?\n",
     "\n",
-    "Nope, it's not possible. What is possible, is, however, to have multiple nodes connected to a source/sink."
+    "Nope, it's not possible. What is possible, is, however, to have multiple nodes connected to a source/sink (which is essentially the same thing anyway)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Other experiments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maximum flow: 1.19\n",
+      "Segment of the node 0: 1\n",
+      "Segment of the node 1: 1\n",
+      "Segment of the node 2: 1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<_maxflow.GraphFloat at 0x7fc527aa7de0>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import maxflow\n",
+    "\n",
+    "g = maxflow.Graph[float](3, 6)\n",
+    "nodes = g.add_nodes(3)\n",
+    "g.add_edge(nodes[0], nodes[1], 0.53, 0.53)\n",
+    "g.add_edge(nodes[1], nodes[2], 0.97, 0.97)\n",
+    "g.add_edge(nodes[2], nodes[0], 0.66, 0.66)\n",
+    "# g.add_tedge(nodes[0], 89.68, 0)\n",
+    "g.add_tedge(nodes[0], (0.53 + 0.66)+0.0, 0)\n",
+    "g.add_tedge(nodes[1], 0, 28.68)\n",
+    "g.add_tedge(nodes[2], 0, 28.22)\n",
+    "\n",
+    "# Find the maxflow.\n",
+    "flow = g.maxflow()\n",
+    "print(\"Maximum flow:\", flow)\n",
+    "\n",
+    "# Print the segment of each node.\n",
+    "print(\"Segment of the node 0:\", g.get_segment(nodes[0]))\n",
+    "print(\"Segment of the node 1:\", g.get_segment(nodes[1]))\n",
+    "print(\"Segment of the node 2:\", g.get_segment(nodes[2]))\n",
+    "g"
    ]
   }
  ],
